# mc_discord_bot

./: .env.sample  Cargo.toml  README.md
src/: main.rs
