[package]
name = "mc_discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.7", default-features = false, features = [
  "builder",
  "cache",
  "chrono",
  "client",
  "gateway",
  "http",
  "model",
  "utils",
  "rustls_backend",
] }
dotenvy = "0.15.7"
tokio = { version = "1.36.0", features = ["full"] }
chrono = "0.4.35"
reqwest = { version = "0.12.1", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
mc-query = "1.0.1"
