[package]
name = "mc_discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12.1"
dotenvy = "0.15.7"
tokio = "1.36.0"
chrono = "0.4.35"
reqwest = { version = "0.12.1", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
mc-query = "1.0.1"
